# chatUI

./: 123456  123456.pub  settings.gradle.kts
.github/workflows/: android-ci.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/login/: CMakeLists.txt  UserAPI.cpp  UserAPI.h
app/src/main/cpp/mysql/: CMakeLists.txt  SQLiteManager.cpp  SQLiteManager.h
app/src/main/java/com/example/chatsystem/: ChatAdapter.kt  ChatBean.kt  LoginActivity.kt  MainActivity.kt  NativeChatManager.kt  RegisterActivity.kt
app/src/main/res/drawable/: bty_white.xml  register_btn_bg.xml  register_edit_bg.xml
app/src/main/res/layout/: activity_main.xml  item_chat.xml  login.xml  register.xml  weixinmain.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
